public/styles/sidebar.css
link {
  color: #fff;
}

a {
  color: #fff;
}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* html, body {
    height: 100vh;
} */

body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    color: #202124;
}

h3, h4, h5 {
  color: #202124;
}

h4 {
  font-weight:normal;
}


/* SIDEBAR STYLING */
.user-avatar {
    vertical-align: middle;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    border-style:solid;
    /* border-color: #202124; */
    border-color: #ffff;
    margin-top: 3.5rem;
    margin-left: 3.5rem;
    margin-right: 3.5rem;
    margin-bottom: 1rem;
  }

  .user-name {
    vertical-align: middle;
    margin-left: 3rem;
    margin-right: 2rem;
    margin-bottom: 1rem;
  }


.sidebar {
    width: 220px;
    flex-shrink: 0;
    /* background-color: #f6f8fc; */
    background-color: #1d2333;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    color: #ffff;
    height: 100%;
    overflow: auto;
    bottom: 0;
}

.sidebar-item{
    padding: .75em 1em;
    display: block;
    transition: background-color .15s;
    border-radius: 5px;
  }
  .sidebar-item:hover{
    background-color: #eaebef;
    color: #658fff;
  }

  .sidebar-item.active{
    background-color: #d3e3fd;
    color: #658fff;
    font-weight: bold;
  }

  .sidebar-title{
    display: flex;
    /* font-size: 1.2em; */
    justify-content: space-between;
  }
  .sidebar-title span i{
    display: inline-block;
    width: 1.5em;
  }
  .sidebar-title .toggle-btn{
    cursor: pointer;
    transition: transform .3s;
  }
  .sidebar-item.open > .sidebar-title .toggle-btn{
    transform: rotate(180deg);
  }
  .sidebar-content{
    padding-top: .25em;
    height: 0;
    overflow: hidden;
    font-size: .8rem;
  }
  .sidebar-item.open > .sidebar-content{
    height: auto;
  }
  
  .sidebar-item.plain{
    /* color: #202124; */
    color: #ffff;
    text-decoration: none;
  }
  .sidebar-item.plain:hover{
    text-decoration: underline;
    /* background-color: #eaebef; */
    background-color: #2e3750;
    color: #658fff;
  }
  .sidebar-item.plain i{
    display: inline-block;
    width: 1.7em;
  }

  .sidebar-item:hover{
    /* background-color: #eaebef; */
    background-color: #2e3750;
    color: #658fff;
  }

  .sidebar-item.sidebar-item.plain:focus{
    /* background-color: #d3e3fd; */
    background-color: #2e3750;
    font-weight: bold;
    color: #658fff;
  }

  .logout-btn {
    border: none;
    display: inline-block;
    width: 1.7em;
    background-color: inherit;
    /* color: #202124; */
    color: #ffff;
    padding: .75em 1em;
    font-size: 16px;
    cursor: pointer;
    display: inline-block;
  }

  .logout-btn:hover {
    color: #658fff;
    text-decoration: underline;
  }

  .bi-box-arrow-right {

    padding: .75em 1em;
    display: block;
    transition: background-color .15s;
    border-radius: 5px;
  }

